<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity"
    android:animateLayoutChanges="true">


    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical" android:animateLayoutChanges="true">

            <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/hint_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true" />

            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true" />

            <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/action_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <Button android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/register_button"/>

            <Button android:id="@+id/password_reset_button"
                style="?android:textAppearanceSmall"
                android:layout_below="@id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_password_reset"
                android:textStyle="bold"/>
        </RelativeLayout>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>



